<resources>
    <string name="app_name">Ultimate</string>
    <string name="action_settings">Settings</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current hang man in the quiz</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_erase">Erase Image</string>
    <string name="button_set_color">Set Color</string>
    <string name="button_set_line_width">Set Line Width</string>
    <string name="button_picture">Set Picture</string>
    <string name="line_imageview_description">This displays the line thickness</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="menuitem_color">Color</string>
    <string name="menuitem_delete">Delete Drawing</string>
    <string name="menuitem_line_width">Line Width</string>
    <string name="message_erase">Are you sure you want to delete your drawing?</string>
    <string name="change_game">Change Game</string>
    <string name="title_color_dialog">Choose Color</string>
    <string name="title_line_width_dialog">Choose Line Width</string>
    <string name="title_picture_dialog">Choose Grid</string>
    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="picture_prompt">Choose a grid to play on</string>
    <string-array name="picture_array">
        <item>Free Draw</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>


</resources>
